<resources>
    <string name="app_name">EBBill</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="calculate">calculate</string>
    <string name="Userdetails">User details</string>
    <string name="Update">Update</string>
    <string name="update">update</string>
    <string name="go">GO</string>
    <string name="Name">Name</string>
    <string name="address">address:</string>
    <string name="phone">Phone:</string>
    <string name="submit">submit</string>
    <string name="abc">user id:</string>
    <string name="abc1">go</string>
    <string name="abc2">customer name:</string>
    <string name="abc3">email:</string>
    <string name="abc4">units consumed:</string>
    <string name="name">name</string>
</resources>
