<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".createbill1">

    <RelativeLayout
        tools:context="com.example.kani.myapplication.createbill"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/relativeLayout">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText10"
            android:layout_alignParentTop="true"
            android:layout_alignBottom="@+id/textView12"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/textView12"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/abc"
            android:id="@+id/textView12"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:minWidth="45dp"
            android:minHeight="50dp"
            android:textSize="45sp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/abc1"
            android:id="@+id/button12"
            android:layout_below="@+id/textView12"
            android:layout_centerHorizontal="true"
            android:textSize="50sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/abc2"
            android:id="@+id/textView13"
            android:layout_alignBottom="@+id/editText11"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/Name"
            android:ems="10"
            android:id="@+id/editText11"
            android:layout_below="@+id/button12"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/textView13" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:ems="10"
            android:id="@+id/editText12"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/textView12" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/editText13"
            android:layout_below="@+id/editText12"
            android:layout_toEndOf="@+id/textView12" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/address"
            android:id="@+id/textView14"
            android:layout_alignTop="@+id/editText12"
            android:layout_alignEnd="@+id/textView12" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/phone"
            android:id="@+id/textView15"
            android:layout_alignBottom="@+id/editText13"
            android:layout_alignEnd="@+id/textView14" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/editText14"
            android:layout_below="@+id/editText13"
            android:layout_alignStart="@+id/editText13" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/abc3"
            android:id="@+id/textView16"
            android:layout_alignBottom="@+id/editText14"
            android:layout_toStartOf="@+id/editText14" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/abc4"
            android:id="@+id/textView17"
            android:layout_marginTop="47dp"
            android:layout_below="@+id/textView16"
            android:layout_alignParentStart="true"
            android:textSize="23sp"
            android:textColor="#7408f8" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editText15"
            android:layout_alignBottom="@+id/textView17"
            android:layout_toEndOf="@+id/textView17" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:id="@+id/button13"
            android:layout_below="@+id/textView17"
            android:layout_alignStart="@+id/button12"
            android:textSize="23sp"
            android:textColor="#200135" />
    </RelativeLayout>

</RelativeLayout>
